# fancontrol

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  pages.yml
docs/: index.html
docs/assets/: index-CHd2bLl7.js  index-DNX52tlY.js  index-Dz48nHeR.css
scripts/: dump-fan-table.ps1  probe-set-table.ps1  probe-wmi-methods.ps1  test-fan-set-table.md
site/: index.html  package-lock.json  package.json  vite.config.ts
site/src/: main.ts  style.css
src/: cli.rs  config.rs  errors.rs  fan.rs  gui.rs  main.rs  tui.rs
src/platform/: lenovo.rs  linux.rs  mod.rs  windows.rs
