[package]
name = "fancontrol"
version = "0.1.0"
edition = "2021"
description = "A minimal cross-platform app to control fan speed"
authors = ["Philipp Thoss <ph.thoss@gmx.de>"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
eframe = "0.30"

[target.'cfg(target_os = "linux")'.dependencies]
# sysfs/hwmon access via std::fs — no extra deps needed

[target.'cfg(target_os = "windows")'.dependencies]
wmi = "0.14"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
