[package]
name = "fancontrol"
version = "0.1.0"
edition = "2021"
description = "A minimal cross-platform app to control fan speed"
authors = ["Philipp Thoss <ph.thoss@gmx.de>"]
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
log = "0.4"
simplelog = "0.12"
thiserror = "2"
eframe = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"

[target.'cfg(target_os = "linux")'.dependencies]
# sysfs/hwmon access via std::fs — no extra deps needed

[target.'cfg(target_os = "windows")'.dependencies]
wmi = "0.14"

[dev-dependencies]
tempfile = "3"
